Fix tab links on mobile

--- a/assets/css/_filter.scss
+++ b/assets/css/_filter.scss
@@ -60,3 +60,11 @@
         border-bottom: 2px solid #673AB7;
     }
 }
+@media screen and (max-width: 425px) {
+    .search-panel {
+        .nav-tabs .nav-link {
+            padding: 0.5rem 1rem;
+        }
+    }
+    
+}
