--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -210,6 +210,7 @@ textarea {
 .mssg-table {
     min-height: 200px;
 }
+
 @media screen and (max-width: 992px) {
     .foto1 {
         display: none;
@@ -237,6 +238,11 @@ textarea {
     .foto2 {
         top: -60px;
     }
+    #activityTab {
+    .nav-link {
+    padding: 0.5rem;
+}
+}
 }
 @media screen and (max-width: 413px) {
     .btn-reg-activity {
